# Windows-Tools

./: .gitignore  LICENSE  README.es.md  README.md
backup-readme-screenshots-20260622-212012/: README.md
docs/: README.md
releases/audio-device-switcher/: README.txt  checksums.txt
releases/link-downloader/: README.md
tools/audio-device-switcher/: README.es.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/audio-device-switcher/docs/: roadmap.md  technical-notes.md
tools/audio-device-switcher/scripts/: backup.ps1  build.ps1  dev.ps1  release-copy.ps1
tools/audio-device-switcher/src/: App.tsx  main.tsx  styles.css
tools/audio-device-switcher/src-tauri/: Cargo.toml  tauri.conf.json
tools/audio-device-switcher/src-tauri/capabilities/: default.json
tools/audio-device-switcher/src-tauri/src/: main.rs
tools/audio-device-switcher/src/i18n/: en.ts  es.ts  index.ts  pt.ts  types.ts
tools/link-downloader/: README.es.md  README.md  build-portable.ps1  package-lock.json  package.json
tools/link-downloader/src/: App.css  App.tsx
tools/link-downloader/src-tauri/: Cargo.toml  tauri.conf.json
tools/link-downloader/src-tauri/capabilities/: default.json
tools/link-downloader/src-tauri/src/: lib.rs  main.rs
