[package]
name = "audio-device-switcher"
version = "0.1.0"
description = "Portable Windows audio output switcher by MPTech Tools."
authors = ["MPTech Tools"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Devices_FunctionDiscovery",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem"
] }
